# smart-fire-system

./: .gitignore  README.md
api/: .env.example  pyproject.toml
api/app/: application.py  config.py  database.py  models.py  mqtt.py  schemas.py
api/app/routers/: ai.py  alerts.py  commands.py  devices.py  sensors.py  state.py
web-client/: .env.example  package-lock.json  package.json
web-client/src/: App.tsx  index.css
web-client/src/api/: ai.ts  alerts.ts  client.ts  commands.ts  sensors.ts  state.ts
web-client/src/components/layout/: app-layout.tsx  bottom-nav.tsx  sidebar.tsx  top-bar.tsx
web-client/src/components/shared/: material-icon.tsx  page-header.tsx
web-client/src/hooks/: use-ai-detections.ts  use-alerts.ts  use-commands.ts  use-sensors.ts  use-system-state.ts
web-client/src/lib/: constants.ts  utils.ts
web-client/src/pages/: ai-monitoring.tsx  alert-logs.tsx  analytics.tsx  dashboard.tsx  manual-controls.tsx
web-client/src/providers/: live-data-context.ts  mqtt-live-provider.tsx  types.ts
